# bedge

./: .gitignore  Cargo.toml
src/: main.rs
static/: index.html  sw.js
static/js/: index.js
