[package]
name = "bedge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
futures = "0.3"
web-push = "0.9.3"
base64 = "0.21.0"
